# cppChatSdl_net

./: .gitignore  CMakeLists.txt  client.out  server.out
client/: CMakeLists.txt
client/src/: Client.cpp
server/: CMakeLists.txt
server/src/: Server.cpp
